--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ejs": "^3.1.9",
     "mysql2": "^3.6.5",
     "passport": "^0.7.0",
+    "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
