--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "swagger": "^0.7.5"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
